--- a/partials/sidebar.html
+++ b/partials/sidebar.html
@@ -2,6 +2,7 @@
   <div class="side__brand">SPA2099 HR Health</div>
   <ul class="side__nav">
     <li><a href="./Summary.html"   data-key="summary">Summary</a></li>
+    <li><a href="./User.html"      data-key="wellness">Wellness</a></li>
     <li><a href="./Analytics.html" data-key="analytics">Analytics</a></li>
     <li><a href="./Engagement.html" data-key="engagement">Engagement</a></li>
     <li><a href="./Settings.html"  data-key="settings">Settings</a></li>
