--- a/partials/sidebar.html
+++ b/partials/sidebar.html
@@ -1,11 +1,12 @@
 <nav class="side">
-  <div class="side__brand">SPA2099 HR Health</div>
+  <div class="side__brand" data-i18n="app.title">SPA2099 HR Health</div>
   <ul class="side__nav">
-    <li><a href="./Summary.html"   data-key="summary">Summary</a></li>
-    <li><a href="./User.html"      data-key="wellness">Wellness</a></li>
-    <li><a href="./Analytics.html" data-key="analytics">Analytics</a></li>
-    <li><a href="./Engagement.html" data-key="engagement">Engagement</a></li>
-    <li><a href="./Corporate.html"  data-key="corporate">Corporate</a></li>
-    <li><a href="./Settings.html"  data-key="settings">Settings</a></li>
+    <li><a href="./Summary.html"   data-key="summary" data-i18n="nav.summary">Summary</a></li>
+    <li><a href="./User.html"      data-key="wellness" data-i18n="nav.wellness">Wellness</a></li>
+    <li><a href="./Analytics.html" data-key="analytics" data-i18n="nav.analytics">Analytics</a></li>
+    <li><a href="./Engagement.html" data-key="engagement" data-i18n="nav.engagement">Engagement</a></li>
+    <li><a href="./Corporate.html"  data-key="corporate" data-i18n="nav.corporate">Corporate</a></li>
+    <li><a href="./Devices.html"   data-key="devices" data-i18n="nav.devices">Devices</a></li>
+    <li><a href="./Settings.html"  data-key="settings" data-i18n="nav.settings">Settings</a></li>
   </ul>
 </nav>
